test/chainsaw/authpolicy/manifest-validation/baseline_auth/authpolicy.yaml
apiVersion: ztoperator.kartverket.no/v1alpha1
kind: AuthPolicy
metadata:
  name: auth-policy
spec:
  enabled: true
  baselineAuth:
    claims:
      - claim: role
        values:
          - some_role
  allowedAudiences:
    - value: entraid_server
  wellKnownURI: http://mock-oauth2.auth:8080/entraid/.well-known/openid-configuration
  selector:
    matchLabels:
      app: application
