test/chainsaw/authpolicy/manifest-validation/methods/authpolicy.yaml
apiVersion: ztoperator.kartverket.no/v1alpha1
kind: AuthPolicy
metadata:
  name: auth-policy
spec:
  enabled: true
  ignoreAuthRules:
    - paths:
        - /public
      methods:
        - GET
  authRules:
    - paths:
        - /secure
      methods:
        - GET
      when:
        - claim: role
          values:
            - entra_user_role
  wellKnownURI: http://mock-oauth2.auth:8080/entraid/.well-known/openid-configuration
  selector:
    matchLabels:
      app: application
