test/chainsaw/authpolicy/manifest-validation/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: manifest-validation
spec:
  skip: false
  concurrent: true
  skipDelete: false
  namespaceTemplate:
    metadata:
      name: chainsaw-manifest-validation
      labels:
        istio-injection: enabled

  steps:
    - try:
        - create:
            file: ../../../resources/skiperator/application.yaml

        - create:
            file: audience/authpolicy.yaml
        - script: # Audience
            content: |
              ./../../../../scripts/patch-invalid-spec.sh \
                audience/patch-invalid-audience.yaml \
                "one audience cannot be defined from both 'value' and 'valueFrom'"

              ./../../../../scripts/patch-invalid-spec.sh \
                audience/patch-invalid-audience-ref.yaml \
                "cannot reference both a ConfigMap and a Secret"

              ./../../../../scripts/patch-invalid-spec.sh \
                audience/patch-empty-audience.yaml \
                "field 'value' cannot be empty string"
        - delete:
            file: audience/authpolicy.yaml

        - create:
            file: accepted_resources/authpolicy.yaml
        - script: # Accepted resources
            content: |
              ./../../../../scripts/patch-invalid-spec.sh \
                accepted_resources/patch-idporten-wellknown.yaml \
                "acceptedResources must be non-empty when using Ansattporten or ID-Porten"
        - delete:
            file: accepted_resources/authpolicy.yaml

        - create:
            file: baseline_auth/authpolicy.yaml
        - script: # Baseline auth
            content: |
              ./../../../../scripts/patch-invalid-spec.sh \
                baseline_auth/patch-empty-claims.yaml \
                "claims must be a non-empty list"
        - delete:
            file: baseline_auth/authpolicy.yaml

        - create:
            file: autologin/authpolicy.yaml
        - script: # AutoLogin - patch
            content: |
              ./../../../../scripts/patch-invalid-spec.sh \
                autologin/patch-empty-oauthcredentials.yaml \
                "oAuthCredentials must be set when autoLogin is enabled"

              ./../../../../scripts/patch-invalid-spec.sh \
                autologin/patch-without-autologin.yaml \
                "oAuthCredentials cannot be set unless autoLogin is configured"

              ./../../../../scripts/patch-invalid-spec.sh \
                autologin/patch-invalid-login-param-key.yaml \
                "loginParams keys must match ^[a-zA-Z_][a-zA-Z0-9_]*$"
        - script: # AutoLogin - replace
            content: |
              ./../../../../scripts/replace-invalid-spec.sh \
                autologin/authpolicy-without-oauthcredentials.yaml \
                "oAuthCredentials must be set when autoLogin is enabled"

              ./../../../../scripts/replace-invalid-spec.sh \
                autologin/authpolicy-without-autologin.yaml \
                "oAuthCredentials cannot be set unless autoLogin is configured"
        - delete:
            file: autologin/authpolicy.yaml

        - create:
            file: methods/authpolicy.yaml
        - script: # Methods
            content: |
              ./../../../../scripts/patch-invalid-spec.sh \
                methods/patch-invalid-auth-rule-method.yaml \
                'Unsupported value: "INVALID_METHOD"'

              ./../../../../scripts/patch-invalid-spec.sh \
                methods/patch-invalid-ignore-auth-rule-method.yaml \
                'Unsupported value: "INVALID_METHOD"'
        - delete:
            file: methods/authpolicy.yaml
